# Requiem

./: .clangd  .editorconfig  .env.example  .gitignore  .npmrc  API_REFERENCE.md  ARCHITECTURE.md  CATEGORY_COLLAPSE_REPORT.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_GOVERNANCE.md  FINAL_SHIP_REVIEW.md  FIXLOG.md  GETTING_STARTED.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE_ENTERPRISE_NOTE.md  Makefile  OPERATOR_RUNBOOK.md  PROFESSIONALIZATION_REPORT.md  QUICKSTART.md  README.md  REALITY_CHECK_FIXES.md  ROADMAP.md  ROUTES.md  SECURITY.md  SECURITY_MODEL.md  SUPPORT.md  TOP_5_EXISTENTIAL_WEAKNESSES.md  VERIFIED_CLAIMS.md  build.ps1  build_log.txt  check_imports.js  claims_lint_result.txt  cli_help.txt  cmake_log.txt  context_paging.cpp  context_paging.hpp  (+31 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
__cmake_systeminformation/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DumpInformation.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  results.txt
agents/: swarm.config.json
bench/: cas-integrity-report.json  crash-matrix-report.json  determinism-report.json  distributed-execution-report.json  performance-report.json  plugin-system-report.json  recovery-report.json  replay-verification.json  stress.ts  system-audit.json  workflow-library-report.json
build_test/: CMakeCache.txt
contracts/: cli-surface.snapshot.json  compat.matrix.json  competitive.matrix.json  cost-model.json  default.policy.json  deps.allowlist.json  determinism.contract.json  migration.policy.json
docs/: ADVERSARIAL_REPORT.md  AI_ARCHITECTURE.md  AI_EDGE_CASES.md  AI_SCAFFOLD_DECISIONS.md  API_CONVENTIONS.md  API_GOVERNANCE.md  API_SURFACE.md  ARCHITECTURAL_INVARIANTS.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHIVE_INDEX.md  AUDIT_RECOVERY_REPORT.md  AUTHENTICATED_ROUTE_TRUTH.md  AUTOMATION_INTEGRATIONS.md  BASELINE.md  BASELINE_AUDIT.md  BENCH.md  CAPABILITY_GRAPH.md  CAS.md  CLI_REFERENCE.md  CLI_SCHEMA.md  COHERENCE_CONSOLIDATION.md  CONFIG_IMMUTABILITY.md  CONTRACT.md  CONVERGENCE_INDEX.md  COST_ACCOUNTING.md  COST_ANOMALY_STRATEGY.md  CUTOVER.md  DATASET_CATALOG.md  DEMO.md  DEPLOYMENT.md  DETERMINISM.md  DEVELOPER_TOOLKIT.md  DIFFERENTIATION.md  DIFFERENTIATION_PROOF.md  DIFFERENTIATORS.md  DOCS_GOVERNANCE.md  ECOSYSTEM_EXPANSION_REPORT.md  ENGINE.md  ENTROPY_REMOVAL_LOG.md  (+128 more)
e2e/: smoke.test.ts
eval/: baseline_results.json  policy_adversarial_cases.json
flags/: flags.registry.json
formal/: CAS.tla  Determinism.tla  Protocol.tla  README.md  Replay.tla  chaos_harness.cpp  debugger.cpp  gdpr_basic.json  model_checker.py  policy_linter.cpp  policy_linter.hpp  verify_chaos.yml  verify_policies.sh
guarantees/: system-guarantees.json
knowledge/: memory.json
launch/: PRODUCT_HUNT_KIT.md
mcp/: ci_failure_recovery.mcp.json  full_refactor_pass.mcp.json  release_preflight.mcp.json  repo_health_scan.mcp.json
plans/: implementation_plan.md
plugins/: README.md  plugin-interface.ts
policies/: prompt-policy.json
policy/: default.policy.json  policy.schema.json
private/: OPERATIONS_README.md
prompts/: system.lock.md  task.template.md
ready-layer/: .env.example  .gitignore  REPO_WIDE_UI_SYSTEM_REPORT.md  STITCH_INTEGRATION.md  UI_CONSISTENCY_MATRIX.md  eslint.config.mjs  next.config.performance.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.js  prisma.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.mjs  vitest.config.ts
reports/: bundle-baseline.json  ci-ratchet-report.json  circular-dep-baseline.json  circular-deps-before-after.md  circular-deps-before.json  cli-contract-verification.json  cli-surface.json  cold-start-after.json  cold-start-baseline.json  cold-start-before.json  cold-start-delta.md  console-baseline.json  dependency-graph-report.json  entropy-collapse-delta.md  entropy-collapse-report.json  exports-baseline.json  high-roi-pass-summary.md  perf-current.json  perf-final-delta.md  perf-maintainability-after.json  perf-maintainability-before.json  perf-maintainability-delta.md  professionalization-report.md  provider-signing-discovery.md  public-surface-snapshot.json  sqlite-optimization.md
runbooks/: README.md  incident-cas-corruption.md  incident-cluster-incompatibility.md  incident-p99-spike.md  incident-replay-mismatch.md  ops-kill-switch.md  ops-version-bump.md
scripts/: api-governance-report.ts  bootstrap-preflight.mjs  ci-circular-deps.mjs  ci-cli-surface.mjs  ci-ratchet-gates.ts  ci-ratchet.ts  claims-linter.ts  cmake-build.sh  codemod-console-to-logger.ts  cold-start-after.mjs  cold-start-profile.mjs  dead-code-elimination.ts  demo-doctor.ts  demo-run.ts  demo-semantic-state-machine.sh  detect-circular-deps.mjs  docs-truth-gate.ts  doctor.ps1  doctor.sh  durability-child.ts  enforce-package-manager.mjs  ensure-engine-build.mjs  extract-intelligence-cases.ts  final-enforcement.ts  final-verification.ts  generate-route-truth.ts  generate-routes-manifest.ts  generate-sbom.ts  generate-surface-snapshot.ts  generate_golden_corpus.sh  generate_routes_manifest.sh  measure-baseline.ts  quickstart.sh  reality-gate.sh  release_cluster_verify.sh  route-inventory.ts  run-doctor.mjs  run-tsx.mjs  run_production_hardening.sh  snapshot-cli-surface.mjs  (+96 more)
skills/: registry.json
snapshots/: cli-surface.json
src/: audit.cpp  autotune.cpp  billing_harness.cpp  c_api.cpp  caps.cpp  cas.cpp  chaos_harness.cpp  cli.cpp  cluster.cpp  compile_flags.txt  context_paging.cpp  context_paging_test.cpp  cost_ledger.cpp  debugger.cpp  diagnostics.cpp  envelope.cpp  event_log.cpp  fuzz_protocol.cpp  hash.cpp  jsonlite.cpp  memory_harness.cpp  merkle.cpp  metering.cpp  microbench.cpp  observability.cpp  plan.cpp  policy_vm.cpp  protocol_harness.cpp  rbac.cpp  receipt.cpp  recovery_harness.cpp  replay.cpp  runtime.cpp  sandbox_config.cpp  sandbox_posix.cpp  sandbox_win.cpp  security_gauntlet.cpp  shadow_runner.cpp  snapshot.cpp  stress_harness.cpp  (+8 more)
test_chaos_diff_cas/: index.ndjson
(+812 files in other folders)
